DuPont DevSB/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Main_Ending_Reason__c</fullName>
        <label>Main Ending Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abort Negotiation</fullName>
                </value>
                <value>
                    <fullName>Alternate DuPont Materials Selected</fullName>
                </value>
                <value>
                    <fullName>choose not to propose</fullName>
                </value>
                <value>
                    <fullName>choose not to renew</fullName>
                </value>
                <value>
                    <fullName>Customer Reorganization</fullName>
                </value>
                <value>
                    <fullName>Delivery Reliability</fullName>
                </value>
                <value>
                    <fullName>High mass building</fullName>
                </value>
                <value>
                    <fullName>lost to competition</fullName>
                </value>
                <value>
                    <fullName>Lost to in-kind competition</fullName>
                </value>
                <value>
                    <fullName>Lost to non in-kind competition</fullName>
                </value>
                <value>
                    <fullName>Markup/Margin</fullName>
                </value>
                <value>
                    <fullName>No Solution</fullName>
                </value>
                <value>
                    <fullName>Not good fit</fullName>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Price In-Kind</fullName>
                </value>
                <value>
                    <fullName>Price Not In-Kind</fullName>
                </value>
                <value>
                    <fullName>Product Availability</fullName>
                </value>
                <value>
                    <fullName>Product Offering</fullName>
                </value>
                <value>
                    <fullName>product peformance</fullName>
                </value>
                <value>
                    <fullName>Product Quality / Functionality</fullName>
                </value>
                <value>
                    <fullName>Project Cancelled</fullName>
                </value>
                <value>
                    <fullName>Project Cancelled by Customer</fullName>
                </value>
                <value>
                    <fullName>Project Deferred</fullName>
                </value>
                <value>
                    <fullName>Regulatory / Legal</fullName>
                </value>
                <value>
                    <fullName>sales process</fullName>
                </value>
                <value>
                    <fullName>Sales thru distributor</fullName>
                </value>
                <value>
                    <fullName>service &amp; support</fullName>
                </value>
                <value>
                    <fullName>Supply Chain Performance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>13-(Energy) Oil &amp; Gas  Extraction</fullName>
                </value>
                <value>
                    <fullName>32-(Mfg)Stone, Clay, Glass &amp; Concrete Products</fullName>
                </value>
                <value>
                    <fullName>36-(Mfg)Electronic &amp; Other Electrical Equip. &amp; Components, except Computer Equipment</fullName>
                </value>
                <value>
                    <fullName>37-(Mfg)Transportation Equipment</fullName>
                </value>
                <value>
                    <fullName>43-United States Postal Service</fullName>
                </value>
                <value>
                    <fullName>45-(Transp)Transporation by Air</fullName>
                </value>
                <value>
                    <fullName>65-Real Estate</fullName>
                </value>
                <value>
                    <fullName>Adhesive and Sealants</fullName>
                </value>
                <value>
                    <fullName>Advertising/Marketing</fullName>
                </value>
                <value>
                    <fullName>Aerospace/Aircraft</fullName>
                </value>
                <value>
                    <fullName>Agriculture, forestry and animal farming</fullName>
                </value>
                <value>
                    <fullName>APPAREL &amp; HOME FURNISHING</fullName>
                </value>
                <value>
                    <fullName>Architectural Services</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Automotive Industry</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-All</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-Education</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-Food</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-Furniture</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-Healthcare</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-Hotels</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-Infrastructure</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-Military</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-Offices</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-Public Spaces</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-Retail</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-Transportation</fullName>
                </value>
                <value>
                    <fullName>BI-ComNew-Wall Cladding</fullName>
                </value>
                <value>
                    <fullName>BI-ComReno-All</fullName>
                </value>
                <value>
                    <fullName>BI-ComReno-Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_SubSegment__c</fullName>
        <description>Market SubSegment</description>
        <label>Market SubSegment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App&amp;Home: Cable (72)</fullName>
                </value>
                <value>
                    <fullName>App&amp;Home: Carpet Backing (46)</fullName>
                </value>
                <value>
                    <fullName>App&amp;Home: Furniture &amp; Bedding (16)</fullName>
                </value>
                <value>
                    <fullName>Critic.Clean.: Industrial</fullName>
                </value>
                <value>
                    <fullName>Critic.Clean.: Printing</fullName>
                </value>
                <value>
                    <fullName>Critic.Clean.: Specialties</fullName>
                </value>
                <value>
                    <fullName>Env: Postal</fullName>
                </value>
                <value>
                    <fullName>Env: Retail</fullName>
                </value>
                <value>
                    <fullName>Gra: All applications</fullName>
                </value>
                <value>
                    <fullName>Gra: Display - Indoor</fullName>
                </value>
                <value>
                    <fullName>Gra: Display - Outdoor</fullName>
                </value>
                <value>
                    <fullName>Gra: General - Books</fullName>
                </value>
                <value>
                    <fullName>Gra: General - Manuals</fullName>
                </value>
                <value>
                    <fullName>Gra: General - Maps</fullName>
                </value>
                <value>
                    <fullName>Gra: General - Others</fullName>
                </value>
                <value>
                    <fullName>Gra: Tags&amp;Labels - Chemicals</fullName>
                </value>
                <value>
                    <fullName>Gra: Tags&amp;Labels - Home textile</fullName>
                </value>
                <value>
                    <fullName>Gra: Tags&amp;Labels - Other/All</fullName>
                </value>
                <value>
                    <fullName>Gra: Tags&amp;Labels - Wristband</fullName>
                </value>
                <value>
                    <fullName>I&amp;A Pkg: Dunnage (60I)</fullName>
                </value>
                <value>
                    <fullName>I&amp;A Pkg: Industrial Covers (663)</fullName>
                </value>
                <value>
                    <fullName>I&amp;A Pkg: Pkging - Active/Food (61A)</fullName>
                </value>
                <value>
                    <fullName>I&amp;A Pkg: Pkging -  Industrial Bag (614)</fullName>
                </value>
                <value>
                    <fullName>IntDPTransfers</fullName>
                </value>
                <value>
                    <fullName>Land: Gardening-Horticolture (86)</fullName>
                </value>
                <value>
                    <fullName>MedFab: Medical Specialities</fullName>
                </value>
                <value>
                    <fullName>MedFab: Medical Surgical</fullName>
                </value>
                <value>
                    <fullName>MedPkg: Pharmaceutical Pkg</fullName>
                </value>
                <value>
                    <fullName>MedPkg: Sterile Pkg</fullName>
                </value>
                <value>
                    <fullName>PharmPkg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_DB_ID__c</fullName>
        <description>Temporary ID created during migration of this content from another (legacy) system.</description>
        <label>Migration DB ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiations_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negotiations Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <description>This field is being used to calculate DuPont&apos;s Net Amount</description>
        <formula>CASE ($RecordType.Name , 
&quot;Authentication&quot;, Est_Opportunity_Volume__c*Est_Selling_Price__c, 
&quot;BI-NA MHC Opportunity&quot;, IF( ISPICKVAL(Application_Type__c,&quot;CLT-Fluid&quot;), External_Initiative__r.Initiative_Size__c * 0.383333, IF(ISPICKVAL(Application_Type__c,&quot;CLT-Tyvek&quot;),External_Initiative__r.Initiative_Size__c * 0.051652,IF(ISPICKVAL(Application_Type__c,&quot;CLT-Surfaces&quot;),External_Initiative__r.Value__c * 0.0009,0))), 
&quot;BI-NA Surfaces Dodge&quot;, IF( ISPICKVAL(Application_Type__c,&quot;CLT-Fluid&quot;), External_Initiative__r.Initiative_Size__c * 0.383333, IF(ISPICKVAL(Application_Type__c,&quot;CLT-Tyvek&quot;),External_Initiative__r.Initiative_Size__c * 0.051652,IF(ISPICKVAL(Application_Type__c,&quot;CLT-Surfaces&quot;),External_Initiative__r.Value__c * 0.0009,0))), 
&quot;BI-NA Surfaces Manual&quot;, IF( ISPICKVAL(Application_Type__c,&quot;CLT-Fluid&quot;), External_Initiative__r.Initiative_Size__c * 0.383333, IF(ISPICKVAL(Application_Type__c,&quot;CLT-Tyvek&quot;),External_Initiative__r.Initiative_Size__c * 0.051652,IF(ISPICKVAL(Application_Type__c,&quot;CLT-Surfaces&quot;),External_Initiative__r.Value__c * 0.0009,0))), 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Duration__c</fullName>
        <description>Duration Field used for the purpose of revenue schedulling.</description>
        <inlineHelpText>New Length of contract in months or quarters (see Amount Type)</inlineHelpText>
        <label>New Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether this is a new product for an opportunity.</description>
        <label>New Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Opportunity_Date__c</fullName>
        <inlineHelpText>Date when a similar opportunity will appear again in the future (e.g. a future repeat of this opportunity we are working on)</inlineHelpText>
        <label>Next Opportunity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <description>Identifies the next date this opportunity will be reviewed.</description>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step_Date__c</fullName>
        <description>Due date of the key next step for this opportunity</description>
        <label>Next Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Disclosure_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field defines whether a non-disclosure agreement is needed for this target.</description>
        <label>Non-Disclosure Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityOwner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Second Opportunity Owner, specially for situations where the Owner is not a user of salesforce.com</description>
        <label>Opportunity Owner 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Owned Opportunities</relationshipLabel>
        <relationshipName>Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Images__c</fullName>
        <description>Used to capture images associated with this opportunity</description>
        <inlineHelpText>Used to capture images associated with this opportunity</inlineHelpText>
        <label>Opportunity Images</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <label>Opportunity Product</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Rating__c</fullName>
        <description>This field captures the rating(A,B or C) provided to the opportunity based on the Opportunity Score. The value is updated through the workflow rule.</description>
        <label>Opportunity Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Site__c</fullName>
        <description>Site name, geographical location or city where  this opportunity is located</description>
        <inlineHelpText>Site name, geographical location or city where  this opportunity is located</inlineHelpText>
        <label>Opportunity Site</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_SubType__c</fullName>
        <description>NH Opp Qualification Stage</description>
        <label>Opportunity SubType</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Geographic Expansion</fullName>
                </value>
                <value>
                    <fullName>New Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_UOM__c</fullName>
        <description>Main Unit of Measure used for this opportunity</description>
        <inlineHelpText>Main Unit of Measure used for the quantity fields of this opportunity</inlineHelpText>
        <label>Opportunity UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100 Gallon</fullName>
                </value>
                <value>
                    <fullName>Cubic meter</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Gallon UK</fullName>
                </value>
                <value>
                    <fullName>Gallon US</fullName>
                </value>
                <value>
                    <fullName>Gram</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Linear Foot</fullName>
                </value>
                <value>
                    <fullName>Linear Meter</fullName>
                </value>
                <value>
                    <fullName>Liter</fullName>
                </value>
                <value>
                    <fullName>Milliliter</fullName>
                </value>
                <value>
                    <fullName>MW</fullName>
                </value>
                <value>
                    <fullName>Pair</fullName>
                </value>
                <value>
                    <fullName>Pound</fullName>
                </value>
                <value>
                    <fullName>Square foot</fullName>
                </value>
                <value>
                    <fullName>Square meter</fullName>
                </value>
                <value>
                    <fullName>Ton, metric</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Update__c</fullName>
        <description>This field describes the current status of the opportunity.</description>
        <label>Opportunity Update</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Origin_Type__c</fullName>
        <description>Channel Type of the Origin of the main origin this opportunity is coming from</description>
        <label>Origin Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Data File</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
                <value>
                    <fullName>Global External Data Source</fullName>
                </value>
                <value>
                    <fullName>Local External Data Source</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Salesperson</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web Search Engine</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherProbability__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Additional Coefficient use in calculating probability.</description>
        <inlineHelpText>Additional Coefficient use in calculating probability.</inlineHelpText>
        <label>Other Probability</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Our_Objective__c</fullName>
        <description>NH Opp Qualification Stage</description>
        <inlineHelpText>How does this carry out the account strategy or increase N&amp;H’s relevance with the customer?</inlineHelpText>
        <label>Our Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Our_Role__c</fullName>
        <description>Role of our organisation relative to the progress or ownership of this opportunity</description>
        <label>Our Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Co-own With Partner</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <description>Lookup to user hierarchy for owner.</description>
        <formula>Owner.EPass_ID__c</formula>
        <label>Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Probability__c</fullName>
        <description>Picklist which holds Owner&apos;s Probability of Success</description>
        <inlineHelpText>Owner Probability of Success</inlineHelpText>
        <label>Owner Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Organisation__c</fullName>
        <description>DuPont organization owning/leading the execution of this opportunity</description>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AGCP</fullName>
                </value>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>AGNH</fullName>
                </value>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Landscape Systems</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>BI-Typar</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DCF-ChemSol</fullName>
                </value>
                <value>
                    <fullName>DCF-FLCH</fullName>
                </value>
                <value>
                    <fullName>DCF-FLCH Refrigerants </fullName>
                </value>
                <value>
                    <fullName>DCF-FLCH Vertrel </fullName>
                </value>
                <value>
                    <fullName>DCF-FPS</fullName>
                </value>
                <value>
                    <fullName>DCSE-Clean &amp; Disinfect</fullName>
                </value>
                <value>
                    <fullName>DEC</fullName>
                </value>
                <value>
                    <fullName>DEC-CPM</fullName>
                </value>
                <value>
                    <fullName>DEC-Digital Printing</fullName>
                </value>
                <value>
                    <fullName>DEC-Microcircuit Materials</fullName>
                </value>
                <value>
                    <fullName>DPE</fullName>
                </value>
                <value>
                    <fullName>DPP-Parts</fullName>
                </value>
                <value>
                    <fullName>DPP-Polymers</fullName>
                </value>
                <value>
                    <fullName>DPT-A&amp;HF</fullName>
                </value>
                <value>
                    <fullName>DPT-Air and Filtration</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-ASPS</fullName>
                </value>
                <value>
                    <fullName>DPT-Automotive</fullName>
                </value>
                <value>
                    <fullName>DPT-Barrier &amp; Cleaning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PM_Product_Interest__c</fullName>
        <description>Performance Materials Products of Interest from Lead</description>
        <inlineHelpText>Products of Interest from Lead</inlineHelpText>
        <label>PM Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crastin PBT</fullName>
                </value>
                <value>
                    <fullName>Delrin POM</fullName>
                </value>
                <value>
                    <fullName>Elvamide PA</fullName>
                </value>
                <value>
                    <fullName>DuPont ETPV</fullName>
                </value>
                <value>
                    <fullName>Filaments</fullName>
                </value>
                <value>
                    <fullName>Hytrel TPC-ET</fullName>
                </value>
                <value>
                    <fullName>Minlon PA</fullName>
                </value>
                <value>
                    <fullName>Rynite PET</fullName>
                </value>
                <value>
                    <fullName>Sorona EP</fullName>
                </value>
                <value>
                    <fullName>Thermx PCT</fullName>
                </value>
                <value>
                    <fullName>Vespel Parts</fullName>
                </value>
                <value>
                    <fullName>Zenite LCP</fullName>
                </value>
                <value>
                    <fullName>Zytel PA</fullName>
                </value>
                <value>
                    <fullName>Zytel HTN PPA</fullName>
                </value>
                <value>
                    <fullName>Acsium</fullName>
                </value>
                <value>
                    <fullName>Hypalon</fullName>
                </value>
                <value>
                    <fullName>Kalrez</fullName>
                </value>
                <value>
                    <fullName>Neoprene</fullName>
                </value>
                <value>
                    <fullName>Vamac</fullName>
                </value>
                <value>
                    <fullName>Vertex</fullName>
                </value>
                <value>
                    <fullName>Viton Free Flow</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>1Borealis</fullName>
                </value>
                <value>
                    <fullName>1MDP</fullName>
                </value>
                <value>
                    <fullName>2Q</fullName>
                </value>
                <value>
                    <fullName>2Q-Acrylates</fullName>
                </value>
                <value>
                    <fullName>Advantech</fullName>
                </value>
                <value>
                    <fullName>Appeel</fullName>
                </value>
                <value>
                    <fullName>Bexloy</fullName>
                </value>
                <value>
                    <fullName>Biomax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parksite_Batch_Assertion__c</fullName>
        <label>Parksite Batch Assertion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>